done with refactoring FilesApiTest